0.7.4 (currently working on)
- [#2994] Fix: Check if the data for the seminars is loaded from general storage PID
- [#2953] Fix: Use TYPO3's wrapper for the multibyte string functions
- [#2971] Fix: Crash/SQL error in the list view if the static template is not included
- [#2711] Fix: $BE_USER needs to be marked as global in tx_seminars_flexForms::__construct
- [#2901] Fix: warning 102 when saving seminar-record of type 'date'
- [#2774] Fix: Cannot cancel an unregistration
- [#2872] Fix: Return value for zero vacancies must be 0 not empty string in organizer mails
- [#2813] Change: <label for=""> does not use the values of the id attributes
- [#2786] Fix: Subpart REGISTRATION_BOTTOM is not rendered if there's only an error message

0.7.3 (released 2009-02-27)
- [#2724] Fix: Country list is not localized
- [#2696] Change: Added a test for ensuring that no mails are sent when attendancesMin is 0
- [#2731] Fix: plugin.tx_seminars.allowRegistrationForEventsWithoutDate is called like a switch available in flexforms but it is not in flexforms
- [#2723] Fix: Registration crashes with fatal error if no foods are selected in the registration form
- [#2503] Change: Add some unit tests
- [#737] Fix: When FE-editing an existing event, don't change the crdate
- [#2705] Fix: Crash when saving an event in the FE

0.7.2 (released 2009-02-07)
- [#2620] Fix: seminar::getOrganizers destructs the organizers at the wrong place
- [#2541] Fix: Save memory by destructing the bags after usage in the tests and the production code
- [#2637] Fix: Tables rows in FE registration list not are on the same line

0.7.1 (released 2009-01-20)
- [#2154] Fix: Step counter shows "step 3 of 2" after failed submit attempt on page 2
- [#788] Fix: Use t3lib_div::trimExplode instead of explode
- [#2592] Fix: Fix a few typos in the unit tests
- [#1716] Fix: Make the CSV export work with multiline cells in Excel and OpenOffice.org