@@ -1,4 +1,5 @@
 0.7.4 (currently working on)
+- [#2701] Fix: Image of a seminar was not displayed in single view
 - [#2994] Fix: Check if the data for the seminars is loaded from general storage PID
 - [#2953] Fix: Use TYPO3's wrapper for the multibyte string functions
 - [#2971] Fix: Crash/SQL error in the list view if the static template is not included
